# ArcFlow

./: .clippy.toml  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE-2.0  OPEN_SOURCE.md  README.md  SECURITY.md  TRADEMARK.md
.cargo/: audit.toml
cli/arcflow-cli/: Cargo.toml
cli/arcflow-cli/src/: main.rs
cli/arcflow-cli/src/commands/: init.rs  migrate.rs  mod.rs  run.rs  schedule.rs  trace.rs  validate.rs
cli/arcflow-cli/src/tui/: app.rs  detail.rs  graph.rs  mod.rs  timeline.rs
runtime/arcflow-core/: Cargo.toml
runtime/arcflow-core/benches/: trace_overhead.rs
runtime/arcflow-core/migrations/: 002_recovery_v2.sql  003_arcflow_runs.sql  004_human_approvals.sql  005_trace_events.sql  006_workflow_registry.sql  007_arcflow_sites.sql  20240531000001_recovery_state.sql  20240531000002_recovery_graph_columns.sql  20240531000003_arcflow_runs.sql  20240531000004_human_approvals.sql  20240531000005_trace_events.sql  20240531000006_workflow_registry.sql  20240531000007_arcflow_sites.sql
runtime/arcflow-core/src/: constants.rs  lib.rs
runtime/arcflow-core/src/agent/: context.rs  mod.rs  runtime.rs  stub.rs  tool_loop.rs
runtime/arcflow-core/src/debug/: mod.rs
runtime/arcflow-core/src/embedding/: error.rs  local.rs  mod.rs  onnx.rs  openai.rs  provider.rs  stub.rs  voyage.rs
runtime/arcflow-core/src/error/: mod.rs
runtime/arcflow-core/src/human/: approve.rs  interrupt.rs  mod.rs  storage.rs  wait.rs
runtime/arcflow-core/src/memory/: chunking.rs  coordinator.rs  error.rs  hybrid.rs  mod.rs  namespace.rs  persistent.rs  provider.rs  rerank.rs  session.rs  shared.rs  vector.rs
runtime/arcflow-core/src/migrate/: mod.rs
runtime/arcflow-core/src/providers/: anthropic.rs  async_bridge.rs  error.rs  gemini.rs  mock.rs  mod.rs  model_provider.rs  openai.rs  request.rs  response.rs  runtime.rs
runtime/arcflow-core/src/rcs/: envelope.rs  error.rs  mod.rs  types.rs
runtime/arcflow-core/src/recovery/: mod.rs  persist.rs  pool.rs  resume.rs  state.rs  storage.rs
runtime/arcflow-core/src/retry/: config.rs  engine.rs  mod.rs  timeout.rs
runtime/arcflow-core/src/state/: engine.rs  mod.rs
runtime/arcflow-core/tests/: agent_context_chain.rs  agent_rag_context.rs  agent_tool_loop.rs  chaos_non_retryable.rs  chaos_retry_exhaust.rs  chaos_retry_rate_limit.rs  determinism.rs  graph_react.rs  graph_state.rs  human_interrupt.rs  otel_spans.rs  provider_anthropic_tools.rs  provider_gemini_tools.rs  provider_openai.rs  retry_backoff.rs  sprint4_memory.rs  sprint4_tools.rs  state_propagation.rs  streaming_events.rs  trace_persistence.rs  tracing_builder.rs  tracing_failure.rs  tracing_ordering.rs  tracing_store.rs  workflow_execution.rs  workflow_stack.rs  workflow_test_mode.rs
runtime/arcflow-wasm/: Cargo.toml
runtime/arcflow-wasm/src/: lib.rs  runner.rs  types.rs
runtime/arcflow-wasm/tests/: wasmtime_stub.rs
sdk-python/: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml
sdk-python/arcflow/: __init__.py  _arcflow_binding.pyi  agent.py  constants.py  context.py  exceptions.py  external.py  hitl.py  langchain.py  memory.py  provider.py  result.py  retry.py  schedule.py  stream.py  tool.py  trace.py  workflow.py
sdk-python/arcflow/_internal/: __init__.py  exec_config.py  remote.py  runtime.py
sdk-python/arcflow/langchain/: __init__.py  deps.py  facades.py  graph_convert.py  graph_parse.py  prompt_adapter.py  tool_adapter.py
sdk-python/arcflow/testing/: __init__.py  case_helpers.py  pytest_plugin.py
sdk-python/arcflow/tools/: __init__.py  common.py  stubs.py
sdk-python/arcflow_langchain/: __init__.py  _deps.py  adapter.py  langgraph_convert.py  prompts.py
sdk-python/arcflow_tools/: __init__.py
sdk-python/src/: errors.rs  execution_config.rs  graph.rs  lib.rs  memory.rs  stream.rs  tools.rs  types.rs  workflow.rs
sdk-python/tests/: test_hitl.py  test_pytest_plugin.py  test_workflow_stream.py  test_workflow_test.py  test_workflow_test_fail_times.py  test_workflow_test_retry.py
sdk-python/tests/integration/: test_cross_language_equivalence.py  test_fault_tolerance.py  test_first_five_minutes.py  test_graph_parity.py  test_initial_state.py  test_memory_workflow.py  test_provider_swap.py  test_sprint4_tools_memory.py  test_trace_performance.py  test_trading_starter.py  test_workflow_execution.py  test_workflow_trace.py
sdk-python/tests/security/: test_provider_redaction.py  test_trace_redaction.py
sdk-python/tests/unit/: test_agent.py  test_exceptions.py  test_external_facade.py  test_graph_workflow.py  test_langchain_adapter.py  test_provider.py  test_registry_client.py  test_sprint4_exceptions.py  test_workflow.py
sdk-typescript/: .gitignore  Cargo.toml  README.md  index.d.ts  index.d.ts.map  index.js  index.native.js  index.ts  jest.config.js  package-lock.json  package.json  tsconfig.json
sdk-typescript/arcflow/: agent.ts  constants.ts  exceptions.ts  external.ts  graph.ts  hitl.ts  memory.ts  provider.ts  remote.ts  result.ts  stream.ts  trace.ts  workflow.ts
sdk-typescript/arcflow/testing/: vitest.d.ts  vitest.d.ts.map  vitest.js  vitest.ts
sdk-typescript/arcflow/types/: fault.d.ts  fault.d.ts.map  fault.js  fault.ts
sdk-typescript/scripts/: verify-no-credentials.js
sdk-typescript/src/: errors.rs  execution_config.rs  graph.rs  lib.rs  memory.rs  stream.rs  types.rs  workflow.rs
sdk-typescript/tests/: agent-tool-loop.test.ts  compare_trace.mjs  fault-tolerance.test.ts  graph-parity.test.ts  hitl.test.ts  provider-swap.test.ts  run-fault-integration.cjs  testing-helpers.test.ts  workflow-stream.test.ts  workflow-test.test.ts  workflow.test.ts
sdk-typescript/tests/fixtures/: mock-native.cjs
server/arcflow-relay/: Cargo.toml  Dockerfile
server/arcflow-relay/src/: lib.rs  main.rs
server/arcflow-relay/tests/: relay_proxy.rs
server/arcflow-server/: Cargo.toml  Dockerfile  Dockerfile.migrate  README.md
server/arcflow-server/src/: exec_config.rs  lib.rs  main.rs  state.rs
server/arcflow-server/tests/: admin_sites.rs  external_callback.rs  migrations.rs  static_auth.rs
(+469 files in other folders)
