# /Cargo.toml
[workspace]
members = [
    "runtime/arcflow-core",
    "sdk-python",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["ArcFlow Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/arcflow/arcflow"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
pyo3 = { version = "0.22", features = ["extension-module"] }
