[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "arcflow"
version = "0.3.0"
description = "AI workflow orchestration runtime — structured, observable, reusable."
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
requires-python = ">=3.9"
authors = [{ name = "ArcFlow Contributors" }]
keywords = ["ai", "workflow", "orchestration", "agents", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["PyYAML>=6.0"]

[project.urls]
Homepage = "https://github.com/isonlycoolie/ArcFlow"
Repository = "https://github.com/isonlycoolie/ArcFlow"
Documentation = "https://github.com/isonlycoolie/ArcFlow/tree/master/documentation/sdks/python"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-httpserver>=1.0",
    "mypy>=1.0,<1.19",
    "black>=23.0",
    "ruff>=0.1",
    "maturin>=1.0",
    "cibuildwheel>=2.16",
]
langchain = [
    "langchain-core>=0.2.0",
]
tools = []

[project.entry-points.pytest11]
arcflow = "arcflow.testing.pytest_plugin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "arcflow._arcflow_binding"

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-*"
skip = "*-musllinux_* pp* *-win32"
build-frontend = "build"
environment-pass = ["CARGO_*", "RUSTFLAGS", "PATH"]

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_28"
before-all = "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain stable"
environment = { PATH = "$HOME/.cargo/bin:$PATH" }

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "W", "I", "N", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["arcflow", "arcflow.langchain", "arcflow.tools", "arcflow.external", "arcflow_langchain", "arcflow_tools"]
enable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = "arcflow._arcflow_binding"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "arcflow: ArcFlow stub-mode workflow tests",
    "arcflow_stub_responses: inject stub responses for workflow.test()",
]
