[package]
name = "arcflow-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "napi-rs bindings for the ArcFlow TypeScript SDK"

[lib]
crate-type = ["cdylib"]

[dependencies]
arcflow-core = { path = "../runtime/arcflow-core" }
napi = { version = "2", default-features = false, features = ["napi4", "async", "tokio_rt"] }
napi-derive = "2"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
napi-build = "2"
