[package]
name = "arcflow-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "arcflow"
path = "src/main.rs"

[dependencies]
arcflow-core = { path = "../../runtime/arcflow-core" }
clap = { version = "4", features = ["derive"] }
serde_json = { workspace = true }
ratatui = "0.28"
crossterm = "0.28"
ureq = { version = "2", default-features = false, features = ["json"] }
