[package]
name = "arcflow-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "arcflow"
path = "src/main.rs"

[dependencies]
arcflow-core = { path = "../../runtime/arcflow-core" }
clap = { version = "4", features = ["derive"] }
tokio = { workspace = true }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "postgres",
    "migrate",
] }
serde_json = { workspace = true }
serde_yaml = "0.9"
ratatui = "0.28"
crossterm = "0.28"
ureq = { version = "2", default-features = false, features = ["json"] }

[dev-dependencies]
tempfile = "3"
