[package]
name = "arcflow-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ArcFlow runtime core — workflow execution engine and runtime contract"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
jsonschema = "0.26"
sha2 = "0.10"
tokio = { workspace = true }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
] }
qdrant-client = "1.12"
async-trait = "0.1"
opentelemetry = { version = "0.27", features = ["trace"] }
opentelemetry_sdk = { version = "0.27", features = ["trace"] }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic"] }

[features]
default = []
integration-memory = []

[lib]
name = "arcflow_core"
path = "src/lib.rs"

[[bench]]
name = "trace_overhead"
harness = false

[dev-dependencies]
criterion = "0.5"
