[package]
name = "arcflow-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ArcFlow runtime core — workflow execution engine and runtime contract"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
jsonschema = "0.26"
sha2 = "0.10"
tokio = { workspace = true }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
] }
qdrant-client = "1.12"
async-trait = "0.1"
opentelemetry = { version = "0.27", features = ["trace"], optional = true }
opentelemetry_sdk = { version = "0.27", features = ["trace", "testing"], optional = true }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic", "http-proto"], optional = true }
tracing-opentelemetry = { version = "0.28", optional = true }
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3"
eventsource-stream = "0.2"
ort = { version = "2.0.0-rc.10", optional = true, default-features = false, features = ["download-binaries"] }

[features]
default = []
integration-memory = []
embedding-local = ["ort"]
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
    "dep:tracing-subscriber",
]

[dev-dependencies]
criterion = "0.5"
wiremock = "0.6"

[lib]
name = "arcflow_core"
path = "src/lib.rs"

[[bench]]
name = "trace_overhead"
harness = false
