[package]
name = "arcflow-server"
version.workspace = true
edition.workspace = true
description = "ArcFlow self-hosted HTTP runtime server"

[lib]
name = "arcflow_server"
path = "src/lib.rs"

[[bin]]
name = "arcflow-server"
path = "src/main.rs"

[dependencies]
arcflow-core = { path = "../../runtime/arcflow-core", features = ["otel"] }
axum = { version = "0.7", features = ["json"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
semver = "1"
subtle = "2"
tower = "0.5"
tower-http = { version = "0.6", features = ["limit", "cors"] }
uuid = { workspace = true }
chrono = { workspace = true }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "postgres",
    "json",
    "chrono",
    "migrate",
] }

[dev-dependencies]
axum = { version = "0.7", features = ["json"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
hyper = "1"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[features]
default = ["debug-endpoints"]
debug-endpoints = []
